[package]
name = "actix-cotw"
version = "0.1.0"
edition = "2021"

[dependencies]
firestore = "0.43"
gcloud-sdk = "0.14"
actix-web = "4"
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "8.0"
once_cell = "1.17.2"
google-cloud-storage = "0.20.0"
google-cloud-auth = "0.16.0"
google-cloud-token = "0.1.2"